# nephroq

./: .dockerignore  .gitignore  CITATION.cff  LICENSE  README.md  app_web.py  pyproject.toml  requirements-lock.txt  requirements.txt  risk_notebook.ipynb
.streamlit/: secrets.toml.example
calibration/: README.md  personalizer.pkl
data/: README.md
docker/: Dockerfile
docs/: CHANGELOG.md  CLINICIAN_DEMO.md  MIMIC_COMPLIANCE.md  MODEL_DOCUMENTATION.md  TRIAL_DATA_PROVENANCE.md  WEB_DEPLOYMENT.md  digital_twin_protocol.md  validation_report_example.md
results/: validation_report.md
src/: acute_events.py  amortized_ai.py  audit_calibration.py  bayesian_model.py  calibrate_mimic.py  clinical_data.py  clinical_outputs.py  clinical_safety.py  digital_twin.py  egfr_measurement.py  external_validation.py  forecast_comparison.py  hierarchical_model.py  hybrid_twin.py  i18n.py  insilico_trial.py  inverse_fit.py  measurement_strategy.py  mechanistic_twin.py  mimic_loader.py  model_core.py  model_v2.py  mvp_calibration.py  noise_identifiability.py  patient_state.py  personalize.py  plot_cric_validation.py  plot_key_results.py  real_data_validity.py  system_twin.py  treatment_engine.py  uncertainty.py
tests/: test_audit_calibration.py  test_calibration_consistency.py  test_egfr_measurement.py  test_external_validation.py  test_index_date.py  test_insilico_trial.py  test_mechanistic_twin.py  test_model.py  test_model_v2.py  test_patient_state.py  test_personalization_integration.py  test_personalize.py  test_twin_scenarios_safety.py  test_uncertainty_outputs.py
